front-end/kubernetes/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: prod
spec:
  parentRefs:
  - name: app-gw
    namespace: prod
  
  # No hostname, so it will respond to the App Gateway's IP
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-service
      port: 8080
